--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaProductos.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaProductos.xaml
@@ -35,22 +35,30 @@
 
             <StackPanel  Orientation="Horizontal" Grid.Row="0" Grid.Column="3" Margin="50,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center">
 
-                <Button  x:Name="btnReset" Click="BtnReset_Click"
+               
+
+                <Button  x:Name="btnAnyadir" Click="BtnAnyadir_Click"
               Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="MaterialDesignFloatingActionMiniLightButton" >
-                    <material:PackIcon Kind="Refresh" Height="24" Width="24" />
+              ToolTip="Añadir" >
+                    <material:PackIcon Kind="Plus" Height="24" Width="24" />
                 </Button>
 
-                <Button  x:Name="btnAnyadir" Margin="10,0,0,0" Click="BtnAnyadir_Click"
+                <Button  x:Name="btnEditar" Margin="10,0,0,0" Click="BtnEditar_Click"
               Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="MaterialDesignFloatingActionMiniLightButton" >
-                    <material:PackIcon Kind="Plus" Height="24" Width="24" />
+              ToolTip="Editar" >
+                    <material:PackIcon Kind="Pencil" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnBorrar" Margin="10,0,0,0" Click="BtnBorrar_Click"
               Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="MaterialDesignFloatingActionMiniLightButton" >
+              ToolTip="Borrar" >
                     <material:PackIcon Kind="DeleteEmpty" Height="24" Width="24" />
+                </Button>
+
+                <Button  x:Name="btnReset" Margin="10,0,0,0" Click="BtnReset_Click"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
+              ToolTip="Reset" >
+                    <material:PackIcon Kind="Refresh" Height="24" Width="24" />
                 </Button>
 
             </StackPanel >
