--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaAverias.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaAverias.xaml
@@ -4,11 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"
+             xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
         <Grid DockPanel.Dock="Top" Height="70">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
@@ -18,14 +21,26 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock Text="LISTA DE AVERIAS" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
+            <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                <CheckBox x:Name="checkTipo"  Margin="5" Content="Filtrar por Tipo " Checked="CheckTipo_Checked" Unchecked="CheckTipo_Unchecked" />
+                <CheckBox x:Name="checkEstado"  Margin="5" Content="Filtrar por Estado "  Checked="CheckEstado_Checked" Unchecked="CheckEstado_Unchecked" />
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="48,0,0,0" >
+                <DatePicker   Name="FechaIni"  Width="120"   Margin="5" material:HintAssist.Hint="Selecciona fecha"    />
+                <DatePicker   Name="FechaFin"  Width="120"   Margin="5" material:HintAssist.Hint="Selecciona fecha"    />
+            </StackPanel>
+            <Button    x:Name="btnFiltrarFechas" Style="{StaticResource MaterialDesignFlatDarkBgButton}"  Click="BtnFiltrarFechas_Click"   
+                        ToolTip="MaterialDesignFlatDarkButton"  Grid.Column="3" Margin="30,0,0,0" >
+                Filtrar
+            </Button>
 
         </Grid>
         <Grid >
 
-            <DataGrid x:Name="dgListaModelos" AutoGenerateColumns="False" AlternatingRowBackground="LightGray" CanUserAddRows="False" ItemsSource="{Binding listaAverias}">
+            <DataGrid x:Name="dgListaAverias" AutoGenerateColumns="False" AlternatingRowBackground="LightGray" CanUserAddRows="False" ItemsSource="{Binding listaAverias}">
                 <DataGrid.Columns>
 
-                    <DataGridTextColumn Header="Fecha Servicio" Binding="{Binding fechaRecepcion,StringFormat=d}"  />
+                    <DataGridTextColumn Header="Fecha entrada" Binding="{Binding fechaRecepcion,StringFormat=d}"  />
                     <DataGridTextColumn Header="Cliente" Binding="{Binding cliente.nombre}" />
                     <DataGridTextColumn Header="Matricula Vehiculo" Binding="{Binding cliente.vehiculo.matricula}" />
                     <DataGridTextColumn Header="Empleado" Binding="{Binding empleado.nombre}"  />
