--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaClientes.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaClientes.xaml
@@ -1,17 +1,14 @@
-﻿<UserControl x:Class="di.proyecto.clase.Vista.ControlesUsuario.UCListaEmpleados"
+﻿<UserControl x:Class="di.proyecto.clase.Vista.ControlesUsuario.UCListaClientes"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"
-             xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-        <Grid DockPanel.Dock="Top" Height="70" Background="Black">
+        <Grid DockPanel.Dock="Top" Height="70">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
@@ -20,44 +17,15 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Text="LISTA DE EMPLEADOS"  FontSize="20" Margin="20" Foreground="WhiteSmoke" FontWeight="Bold"></TextBlock>
-
-            <StackPanel  Orientation="Horizontal" Grid.Row="0" Grid.Column="3" Margin="50,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center">
-
-                <Button  x:Name="btnAnyadir" Click="BtnAnyadir_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Añadir" >
-                    <material:PackIcon Kind="Plus" Height="24" Width="24" />
-                </Button>
-
-                <Button  x:Name="btnEditar" Margin="10,0,0,0" Click="BtnEditar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Editar" >
-                    <material:PackIcon Kind="Pencil" Height="24" Width="24" />
-                </Button>
-
-                <Button  x:Name="btnBorrar" Margin="10,0,0,0" Click="BtnBorrar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Borrar" >
-                    <material:PackIcon Kind="DeleteEmpty" Height="24" Width="24" />
-                </Button>
-
-                <Button  x:Name="btnReset" Margin="10,0,0,0" Click="BtnReset_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Reset" >
-                    <material:PackIcon Kind="Refresh" Height="24" Width="24" />
-                </Button>
-
-            </StackPanel >
-
+            <TextBlock Text="LISTA DE CLIENTES" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
         </Grid>
-        <Grid Background="#FF895D5D" >
-
-            <DataGrid x:Name="dgListaEmpleados" AutoGenerateColumns="False"   CanUserAddRows="False" ItemsSource="{Binding listaEmpleados}"  AlternatingRowBackground="#FF494949"
-                      GridLinesVisibility="All" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" Background="#FF522B2B" >
-
+        <Grid Background="#7f0000">
+            <DataGrid x:Name="dgListaClientes"  AutoGenerateColumns="False" AlternatingRowBackground="#f05545" CanUserAddRows="False" ItemsSource="{Binding listaClientes}"
+                       GridLinesVisibility="All" HorizontalGridLinesBrush="White" VerticalGridLinesBrush="White" Background="#7f0000" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Nombre" Binding="{Binding nombre}"  />
+
+                    <DataGridTextColumn Header="Id" Binding="{Binding id}"  />
+                    <DataGridTextColumn Header="Nombre" Binding="{Binding nombre}" />
                     <!--Apellidos-->
                     <DataGridTemplateColumn Header="Apellidos">
                         <DataGridTemplateColumn.CellTemplate>
@@ -69,28 +37,23 @@
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                    <DataGridTextColumn Header="Rol" Binding="{Binding rol}"  />
-                    <DataGridTextColumn Header="Email" Binding="{Binding email}" />
-                    <DataGridTextColumn Header="Usuario" Binding="{Binding usuario }" />
-                    <DataGridTextColumn Header="Password" Binding="{Binding password}" />
-                    <DataGridTextColumn Header="Telefono" Binding="{Binding telefono}" />
-
-                    
-
+                    </DataGridTemplateColumn>                    
+                    <DataGridTextColumn Header="Email" Binding="{Binding email}"  />
+                    <DataGridTextColumn Header="DNI" Binding="{Binding dni}"  />
+                    <DataGridTextColumn Header="Telefono" Binding="{Binding telefono}"  />
                 </DataGrid.Columns>
-                <!--Detalles Direciones-->
+
                 <DataGrid.RowDetailsTemplate>
                     <DataTemplate>
                         <DockPanel>
                             <Grid DockPanel.Dock="Top" Background="Black">
-                                
+
                             </Grid>
                             <Border BorderThickness="0" Padding="10" >
                                 <StackPanel Orientation="Vertical">
                                     <TextBlock Text="Direccion" FontSize="20" ></TextBlock>
                                     <Separator VerticalAlignment="Bottom"></Separator>
-                                    
+
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock FontSize="12" Text="Calle: " VerticalAlignment="Center" />
                                         <TextBlock FontSize="16" Foreground="White" Text="{Binding calle}" VerticalAlignment="Center"  />
