--- a/di.proyecto.clase/Vista/ControlesUsuario/InformeInventario.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/InformeInventario.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"
-            
+             xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"            
+             xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-       
+        <WindowsFormsHost x:Name="Informe">
+            <rv:ReportViewer x:Name="reporInventario"/>
+        </WindowsFormsHost>
             
     </Grid>
 </UserControl>
