--- a/di.proyecto.clase/Vista/ControlesUsuario/InformeInventario.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/InformeInventario.xaml
@@ -4,13 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"            
-             xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms"
+            xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <WindowsFormsHost x:Name="Informe">
-            <rv:ReportViewer x:Name="reporInventario"/>
-        </WindowsFormsHost>
-            
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="820">
+    <DockPanel>
+        <Grid DockPanel.Dock="Top" Height="70" >
+            <TextBlock Text="INFORME" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
+        </Grid>
+        <Grid>
+            <WindowsFormsHost x:Name="Informe" Margin="10" Width="800">
+                <rv:ReportViewer x:Name="reporInventario"   />
+            </WindowsFormsHost>
+        </Grid>
+    </DockPanel>
+   
 </UserControl>
