--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaAverias.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaAverias.xaml
@@ -14,6 +14,7 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -22,16 +23,26 @@
             </Grid.RowDefinitions>
             <TextBlock Text="LISTA DE AVERIAS" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
             <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                <CheckBox x:Name="checkTipo"  Margin="5" Content="Filtrar por Tipo " Checked="CheckTipo_Checked" Unchecked="CheckTipo_Unchecked" />
-                <CheckBox x:Name="checkEstado"  Margin="5" Content="Filtrar por Estado "  Checked="CheckEstado_Checked" Unchecked="CheckEstado_Unchecked" />
+
+                <ComboBox x:Name="comboFiltroTipo" SelectionChanged="ComboFiltroTipo_SelectionChanged" IsEditable="True"  Text="Selecciona un tipo Averia"
+                      Width="200"  Margin="10,5,10,0" ItemsSource="{Binding listaTipo}" DisplayMemberPath="nombre" SelectedItem="{Binding tipoSeleccionado}"/>
+
+                <ComboBox x:Name="comboFiltroEstado" SelectionChanged="ComboFiltroEstado_SelectionChanged" IsEditable="True"  Text="Selecciona un Estado"
+                      Width="200"  Margin="10,5,10,0" ItemsSource="{Binding listaEstado}" DisplayMemberPath="nombre" SelectedItem="{Binding estadoSeleccionado}"/>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="48,0,0,0" >
                 <DatePicker   Name="FechaIni"  Width="120"   Margin="5" material:HintAssist.Hint="Selecciona fecha"    />
                 <DatePicker   Name="FechaFin"  Width="120"   Margin="5" material:HintAssist.Hint="Selecciona fecha"    />
             </StackPanel>
             <Button    x:Name="btnFiltrarFechas" Style="{StaticResource MaterialDesignFlatDarkBgButton}"  Click="BtnFiltrarFechas_Click"   
-                        ToolTip="MaterialDesignFlatDarkButton"  Grid.Column="3" Margin="30,0,0,0" >
+                        ToolTip="Filtrar Fechas"  Grid.Column="3" Margin="30,0,0,0" BorderBrush="White" >
                 Filtrar
+            </Button>
+
+            <Button  x:Name="btnReset" Margin="10,0,0,0" Click="BtnReset_Click"  Grid.Column="4"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#FF616161" Foreground="White"
+              ToolTip="Reset" >
+                <material:PackIcon Kind="Refresh" Height="24" Width="24" />
             </Button>
 
         </Grid>
@@ -48,7 +59,6 @@
                     <DataGridTextColumn Header="Estado" Binding="{Binding estado1.nombre}"  />
                     <DataGridTextColumn Header="IVA" Binding="{Binding IVA}"  />
                     <DataGridTextColumn Header="Solucion" Binding="{Binding solucion}"  />
-                   
 
                 </DataGrid.Columns>
 
