--- a/di.proyecto.clase/UserControlMenuItem.xaml
+++ b/di.proyecto.clase/UserControlMenuItem.xaml
@@ -7,13 +7,13 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" >
   <Grid>
-    <materialDesign:PackIcon Kind="{Binding Path=Icon}" Width="15" Height="15" Margin="10 16" Foreground="White"/>
-    <ListBoxItem x:Name="ListViewItemMenu" Content="{Binding Path=Header}" Padding="37 14" FontSize="15" Foreground="White"/>
-    <Expander x:Name="ExpanderMenu" Header="{Binding Path=Header}" IsExpanded="False" Width="210" HorizontalAlignment="Right" Background="{x:Null}" Foreground="White">
-      <ListView x:Name="ListViewMenu" ItemsSource="{Binding Path=SubItems}" Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
+    <materialDesign:PackIcon Kind="{Binding Path=Icon}" Width="20" Height="20" Margin="10 16" Foreground="White"/>
+    <ListBoxItem x:Name="ListViewItemMenu" Content="{Binding Path=Header}" Padding="37 14"  Foreground="White" FontWeight="Bold"/>
+        <Expander x:Name="ExpanderMenu" Header="{Binding Path=Header}" IsExpanded="False" Width="210" HorizontalAlignment="Right" Background="{x:Null}" Foreground="White" >
+      <ListView x:Name="ListViewMenu" ItemsSource="{Binding Path=SubItems}" Foreground="White"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
         <ListView.ItemTemplate>
           <DataTemplate>
-            <TextBlock Text="{Binding Path=Name}" Padding="20 5"/>
+            <TextBlock Text="{Binding Path=Name}" Padding="20 5"   />
           </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
