--- a/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
@@ -10,7 +10,7 @@
     <ScrollViewer  HorizontalScrollBarVisibility="auto" VerticalScrollBarVisibility="Auto">
        
     
-    <Grid>
+    <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="300"/>
