--- a/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
@@ -8,11 +8,11 @@
              xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"
              mc:Ignorable="d" 
              Height="auto" Width="auto">
-    <DockPanel>
+    <DockPanel Background="DarkGray">
         <Grid DockPanel.Dock="Top" Background="#222">
             <TextBlock Text="GESTIÓN DE AVERIAS" Margin="20" FontSize="20" Foreground="White" FontWeight="Bold"></TextBlock>
         </Grid>
-        <Grid DockPanel.Dock="Left" Width="300">
+        <Grid DockPanel.Dock="Left" Width="210">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -42,8 +42,9 @@
         </Grid>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
-                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="300"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -56,7 +57,7 @@
                 <RowDefinition Height="Auto"/>
 
             </Grid.RowDefinitions>
-            <material:Card  Background="{DynamicResource MaterialDesignPaper}"  Padding="10" Grid.ColumnSpan="3">
+            <material:Card  Background="{DynamicResource MaterialDesignPaper}"  Padding="10" Grid.ColumnSpan="4">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="500"/>
@@ -65,7 +66,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100"/>
                     </Grid.RowDefinitions>
-                    <TextBlock  Grid.Column="0" Grid.Row="0" Text="Averia Nueva" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
+                    <TextBlock  Grid.Column="0" Grid.Row="0" Text="Averias" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
                     <StackPanel Grid.Column="2" Margin="0,0,0,50">
                         <Button    HorizontalAlignment="Right" Style="{StaticResource MaterialDesignToolForegroundButton}"
                           Width="50" material:RippleAssist.IsCentered="True" Height="50">
@@ -73,13 +74,15 @@
                                            Foreground="WhiteSmoke" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </Button>
                     </StackPanel>
+                    <TextBlock Text="Productos Utilizados" 
+                                Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top"  Grid.Column="1" Margin="144,10,-285,0" />
 
                 </Grid>
 
             </material:Card>
             <ComboBox x:Name="comboCliente"    ItemsSource="{Binding listaCliente}" 
                        SelectedItem="{Binding averiaNueva.cliente ,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
-                  FontSize="20" SelectionChanged="ComboCliente_SelectionChanged"
+                  FontSize="16" SelectionChanged="ComboCliente_SelectionChanged"
                    material:HintAssist.Hint="Cliente" Grid.Row="1" Grid.Column="1" Margin="20" Background="Transparent">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -94,38 +97,38 @@
             </ComboBox>
             <ComboBox x:Name="comboEmpleado" DisplayMemberPath="usuario" material:HintAssist.Hint=" Usuario del Empleaddo" 
                       SelectedItem="{Binding averiaNueva.empleado,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged }"
-                      Grid.Row="1" Grid.Column="0"  FontSize="20"
+                      Grid.Row="1" Grid.Column="0"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaEmpleado}" IsTextSearchEnabled="True" IsEditable="True" />
 
             <ComboBox x:Name="comboTipoAveria" DisplayMemberPath="nombre" material:HintAssist.Hint="Tipo de Averia"
                       SelectedItem="{Binding averiaNueva.tipoaveria ,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
-                      Grid.Row="2" Grid.Column="0"  FontSize="20"
+                      Grid.Row="2" Grid.Column="0"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaTipo}" IsTextSearchEnabled="True" IsEditable="True" />
 
             <ComboBox x:Name="comboEstado" DisplayMemberPath="nombre" material:HintAssist.Hint="Estado de la Averia"
                       SelectedItem="{Binding averiaNueva.estado1 ,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
-                      Grid.Row="2" Grid.Column="1"  FontSize="20"
+                      Grid.Row="2" Grid.Column="1"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaEstado}" IsTextSearchEnabled="True" IsEditable="True" />
 
             <DatePicker  Grid.Row="3" x:Name="dateFechaMatri" Foreground="{DynamicResource MaterialDesignPaper}"
                         SelectedDate="{Binding averiaNueva.fechaRecepcion,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"                        
-                 material:HintAssist.Hint="Fecha de entrada" Margin="20" FontSize="20"  />
+                 material:HintAssist.Hint="Fecha de entrada" Margin="20" FontSize="16"  />
 
             <DatePicker   Grid.Column="1" Grid.Row="3" x:Name="dateFechaSoluci" Foreground="{DynamicResource MaterialDesignPaper}"
                         SelectedDate="{Binding averiaNueva.fechaSolucion,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"                        
-                 material:HintAssist.Hint="Fecha de Solucion" Margin="20" FontSize="20"  />
+                 material:HintAssist.Hint="Fecha de Solucion" Margin="20" FontSize="16"  />
 
             <StackPanel Grid.Row="4"  Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
                 <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="5"  Grid.Column="2" MaxLength="2"
 					  Text="{Binding averiaNueva.IVA, ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
 				  PreviewTextInput="NumberValidationTextBox"
-				  x:Name="txtIVA" Foreground="{DynamicResource MaterialDesignPaper}" FontSize="20"
+				  x:Name="txtIVA" Foreground="{DynamicResource MaterialDesignPaper}" FontSize="16"
 				  material:HintAssist.Hint="%IVA" Margin="20" />
 
                 <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="5"  Grid.Column="2" MaxLength="3"
 					  Text="{Binding averiaNueva.horas, ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
 				  PreviewTextInput="NumberValidationTextBox"
-				  x:Name="txtHoras" Foreground="{DynamicResource MaterialDesignPaper}" FontSize="20"
+				  x:Name="txtHoras" Foreground="{DynamicResource MaterialDesignPaper}" FontSize="16"
 				  material:HintAssist.Hint="Horas" Margin="20" />
 
             </StackPanel>
@@ -167,14 +170,26 @@
                     Foreground="White"
                     FontSize="15"                
                     Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}"
-                    VerticalAlignment="Top"  Height="228"
+                    VerticalAlignment="Top"  Height="230"
                     AcceptsReturn="True"
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto"
-                    material:HintAssist.Hint="Descripcion de la averia"
+                    material:HintAssist.Hint="Descripcion &#10;de la averia"
                     x:Name="txtDescrip"
                     IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextFieldTextBoxEnabledComboBox}" TextChanged="TxtDescrip_TextChanged" />
             </StackPanel>
+
+            <Separator HorizontalAlignment="Left"  Grid.Column="2" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="368" 
+                       RenderTransformOrigin="0.5,0.5" Background="Black" Margin="19,54,0,0" Grid.ColumnSpan="2" Grid.Row="2">
+                <Separator.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="90"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Separator.RenderTransform>
+            </Separator>
         </Grid>
     </DockPanel>
 </UserControl>
