--- a/di.proyecto.clase/Vista/ControlesUsuario/UCAveriaNueva.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCAveriaNueva.xaml
@@ -6,7 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" 
              d:DesignHeight="500" Width="auto">
-    <Grid>
+    <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="300"/>
