--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaClientes.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaClientes.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-        <Grid DockPanel.Dock="Top" Height="70">
+        <Grid DockPanel.Dock="Top" Background="Black"  Height="70">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -17,7 +17,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Text="LISTA DE CLIENTES" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
+            <TextBlock Text="LISTA DE CLIENTES" FontSize="20" Margin="20" Foreground="White" FontWeight="Bold"></TextBlock>
         </Grid>
         <Grid Background="#7f0000">
             <DataGrid x:Name="dgListaClientes"  AutoGenerateColumns="False" AlternatingRowBackground="#f05545" CanUserAddRows="False" ItemsSource="{Binding listaClientes}"
