--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaVehiculos.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaVehiculos.xaml
@@ -7,7 +7,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <DockPanel>
-        <Grid DockPanel.Dock="Top" Height="70">
+        <Grid  Background="Black" DockPanel.Dock="Top" Height="70">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -17,7 +17,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Text="LISTA DE VEHICULOS" FontSize="20" Margin="20" Foreground="Black" FontWeight="Bold"></TextBlock>
+            <TextBlock Text="LISTA DE VEHICULOS" FontSize="20" Margin="20" Foreground="White" FontWeight="Bold"></TextBlock>
 
         </Grid>
         <Grid >
