--- a/di.proyecto.clase/Vista/ControlesUsuario/UCVehiculoNuevo.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCVehiculoNuevo.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:di.proyecto.clase.Vista.ControlesUsuario"
              mc:Ignorable="d" 
              Height="auto" Width="auto">
-    <Grid>
+    <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="300"/>
